[package]
name = "node-bindgen"
version = "6.0.2"
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2021"
description = "easy way to write nodejs module using rust"
repository = "https://github.com/infinyon/node-bindgen"
readme = "README.md"
license = "Apache-2.0"

[features]
default = ["node"]
node = ["nj-sys", "nj-core", "nj-derive"]
build = ["nj-build"]
serde-json = ["nj-core/serde-json"]
uuid = ["nj-core/convert-uuid"]

[dependencies]
nj-sys = { path = "nj-sys", version = "4.0.0", optional = true }
nj-core = { path = "nj-core", version = "6.0.1", optional = true }
nj-build = { path = "nj-build", version = "0.3.0", optional = true }
nj-derive = { path = "nj-derive", version = "3.2.0", optional = true }

[workspace]
resolver = "2"
members = ["nj-build", "nj-cli", "nj-core", "nj-derive", "nj-sys"]

[workspace.dependencies]
serde_json = "1"
serde = { version = "1", default-features = false }
uuid = { version = "1.9.0" }
fluvio-future =  { version = "0.6.2", default-features = false }