[package]
name = "node-bindgen"
version = "6.0.2"
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2021"
description = "easy way to write nodejs module using rust"
repository = "https://github.com/infinyon/node-bindgen"
readme = "README.md"
license = "Apache-2.0"

[features]
default = ["node"]
node = ["nj-sys", "nj-core", "nj-derive"]
build = ["nj-build"]
serde-json = ["nj-core/serde-json"]
uuid = ["nj-core/convert-uuid"]

[dependencies]

nj-sys = { workspace = true, optional = true }
nj-core = { workspace = true,  optional = true }
nj-build = { workspace = true,  optional = true }
nj-derive = { workspace = true,  optional = true }


[workspace]
resolver = "2"
members = ["nj-build", "nj-cli", "nj-core", "nj-derive", "nj-sys"]

[workspace.dependencies]
cargo_metadata = "0.18.0"
cc = "1.0.58"
ctor = "0.2.4"
libc = "0.2.66"
http_req = "0.12.0"
inventory = "0.1.5"
async-trait = "0.1.22"
futures-lite = "2.0.0"
num-bigint = "0.4.0"
pin-utils = "0.1.0"
serde_json = "1"
serde = { version = "1", default-features = false }
structopt = { version = "0.3.18", default-features = false }
toml = "0.8.0"
tracing = "0.1.37"
uuid = { version = "1.10.0" }

fluvio-future =  { version = "0.7.0", default-features = false }

nj-sys = { path = "nj-sys", version = "4.0.0"}
nj-core = { path = "nj-core", version = "6.0.1" }
nj-build = { path = "nj-build", version = "0.3.0" }
nj-derive = { path = "nj-derive", version = "3.2.0" }
node-bindgen = { path = "." }
