[workspace]
resolver = "2"
members = [
    "function",
    "cb",
    "promise",
    "async-cb",
    "json",
    "param",
    "js-env",
    "class-simple",
    "class-wrapper",
    "class-async",
    "stream",
    "buffer",
    "array",
    "hash",
    "electron",
    "cleanup",
    "bigint",
    "tuples",
    "uuid",
    "logging",
]
