[workspace]
resolver = "2"
members = [
    "function",
    "cb",
    "promise",
    "async-cb",
    "json",
    "param",
    "js-env",
    "class-simple",
    "class-wrapper",
    "class-async",
    "stream",
    "buffer",
    "array",
    "electron",
    "cleanup",
    "bigint",
    "tuples",
    "uuid",
    "logging",
]



[workspace.dependencies]
log = "0.4.8"
env_logger = "0.10.0"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
futures-lite = "1.7.0"
uuid = "1.1.0"

node-bindgen = { path = "..", features = ["default"]}
fluvio-future = { version = "0.6.0", features = ["timer"] }