[workspace]
resolver = "2"
members = [
    "function",
    "cb",
    "promise",
    "async-cb",
    "json",
    "param",
    "js-env",
    "class-simple",
    "class-wrapper",
    "class-async",
    "stream",
    "buffer",
    "array",
    "electron",
    "cleanup",
    "bigint",
    "tuples",
    "uuid",
    "logging",
    "option",
]



[workspace.dependencies]
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
futures-lite = "2.0.0"
uuid = "1.10.0"
tracing = "0.1.37"

node-bindgen = { path = "..", default-features = false }
fluvio-future = { version = "0.7.0", features = ["timer"] }
