[package]
name = "nj-cli"
version = "0.4.4"
authors = ["fluvio.io"]
edition = "2021"
description = "build tool for node-bindgen"
repository = "https://github.com/infinyon/node-bindgen"
license = "Apache-2.0"

[dependencies]
cargo_metadata = "0.18.0"
log = "0.4.8"
serde = { workspace = true, features = ["derive"] }
structopt = { version = "0.3.18", default-features = false }
toml = "0.8.0"
