[package]
name = "nj-cli"
version = "0.4.4"
authors = ["fluvio.io"]
edition = "2021"
description = "build tool for node-bindgen"
repository = "https://github.com/infinyon/node-bindgen"
license = "Apache-2.0"

[dependencies]
cargo_metadata = { workspace = true }
serde = { workspace = true, features = ["derive"] }
structopt = { workspace = true }
toml = { workspace = true }
