[package]
name = "nj-core"
version = "6.0.2"
authors = ["fluvio.io"]
edition = "2021"
description = "high level wrapper for Node N-API"
repository = "https://github.com/infinyon/node-bindgen"
readme = "README.md"
license = "Apache-2.0"

[lib]
test = false

[features]
serde-json = ["serde_json"]
convert-uuid = ["uuid"]

[dependencies]
tracing = "0.1.37"
ctor = "0.2.4"
libc = "0.2.66"
inventory = "0.1.5"
async-trait = "0.1.22"
futures-lite = "2.0.0"
nj-sys = { version = "4.0.0", path = "../nj-sys" }
fluvio-future = { workspace = true, features=["task","subscriber"]}
pin-utils = "0.1.0"
num-bigint = "0.4.0"
serde_json = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }