[package]
name = "nj-core"
version = "6.0.3"
authors = ["fluvio.io"]
edition = "2021"
description = "high level wrapper for Node N-API"
repository = "https://github.com/infinyon/node-bindgen"
readme = "README.md"
license = "Apache-2.0"

[lib]
test = false

[features]
serde-json = ["serde_json"]
convert-uuid = ["uuid"]

[dependencies]
async-trait = { workspace = true }
ctor = { workspace = true }
futures-lite =  { workspace = true }
libc = { workspace = true }

inventory = { workspace = true }
tracing = { workspace = true }


fluvio-future = { workspace = true, features=["task","subscriber"]}
pin-utils = { workspace = true }
num-bigint = { workspace = true }
serde_json = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

nj-sys = { workspace = true }