[package]
name = "nj-derive"
version = "0.1.0"
authors = ["fluvio.io"]
edition = "2018"
description = "procedure macro for node-bindgen"
repository = "https://github.com/infinyon/node-bindgen"
readme = "README.md"
license = "Apache-2.0"

[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0"
quote = "1.0.2"
syn = { version = "1.0", features = ["full", "visit-mut"] }
Inflector = "0.11.4"