[package]
name = "nj-derive"
version = "2.0.0"
authors = ["fluvio.io"]
edition = "2018"
description = "procedure macro for node-bindgen"
repository = "https://github.com/infinyon/node-bindgen"
readme = "README.md"
license = "Apache-2.0"

[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "parsing", "visit-mut","derive","extra-traits"] }
Inflector = "0.11.4"

[dev-dependencies]
trybuild = { git = "https://github.com/sehz/trybuild", branch = "check_option" }
node-bindgen = { path = ".." }
flv-future-aio = { version = "2.0.0" }
