[package]
name = "nj-derive"
version = "3.4.2"
authors = ["fluvio.io"]
edition = "2018"
description = "procedure macro for node-bindgen"
repository = "https://github.com/infinyon/node-bindgen"
readme = "README.md"
license = "Apache-2.0"

[lib]
proc-macro = true


[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true,  features = ["full", "parsing", "visit-mut","derive","extra-traits"] }
Inflector = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
node-bindgen = { workspace = true  }
fluvio-future = { workspace = true,  features = ["timer"] }
