[package]
name = "nj-example-buffer"
version = "0.0.0"
authors = ["fluvio.io"]
edition = "2021"
publish = false


[lib]
crate-type = ["cdylib"]


[dependencies]
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
node-bindgen = { path = "../.." }


[build-dependencies]
node-bindgen = { path = "../../", default-features = false, features = ["build"] }
