[package]
name = "nj-example-buffer"
version = "0.0.0"
authors = ["fluvio.io"]
edition = "2021"
publish = false


[lib]
crate-type = ["cdylib"]


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
node-bindgen = { workspace = true}


[build-dependencies]
node-bindgen = { path = "../../", default-features = false, features = ["build"] }
