[package]
name = "nj-example-class-async"
version = "0.1.0"
authors = ["fluvio.io"]
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
node-bindgen = { path = "../.."}
flv-future-aio = { version = "2.0.0" }

[build-dependencies]
node-bindgen = { path = "../../", features = ["build"] }
