[package]
name = "nj-example-class-async"
version = "0.1.0"
authors = ["fluvio.io"]
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
node-bindgen = { path = "../.." }
fluvio-future = { version = "0.3.0", features = ["timer"] }

[build-dependencies]
node-bindgen = { path = "../../", default-features = false, features = ["build"] }
