[package]
name = "nj-example-json"
version = "0.0.0"
authors = ["fluvio.io"]
edition = "2021"
publish = false


[lib]
crate-type = ["cdylib"]


[dependencies]
node-bindgen = { workspace = true, features = ["serde-json"]}
serde_json = { workspace = true }


[build-dependencies]
node-bindgen = {workspace = true, features = ["build"] }
