[package]
name = "nj-example-logging"
version = "0.0.0"
authors = ["fluvio.io"]
edition = "2021"
publish = false


[lib]
crate-type = ["cdylib"]


[dependencies]
node-bindgen = { path = "../.." }
log = "0.4"
env_logger = "0.9"

[build-dependencies]
node-bindgen = { path = "../../", default-features = false, features = ["build"] }
