[package]
name = "nj-example-logging"
version = "0.0.0"
authors = ["fluvio.io"]
edition = "2021"
publish = false


[lib]
crate-type = ["cdylib"]


[dependencies]
node-bindgen = { workspace = true}
log = { workspace = true }
env_logger = { workspace = true }

[build-dependencies]
node-bindgen = {workspace = true, features = ["build"] }
