[package]
name = "nj-example-option"
version = "0.0.0"
authors = ["fluvio.io"]
edition = "2021"
publish = false


[lib]
crate-type = ["cdylib"]


[dependencies]
node-bindgen = { workspace = true, features = ["default"] }
fluvio-future = { workspace = true }

[build-dependencies]
node-bindgen = { workspace = true, default-features = false, features = [
    "build",
] }
