[package]
name = "nj-example-promise"
version = "0.0.0"
authors = ["fluvio.io"]
edition = "2021"
publish = false


[lib]
crate-type = ["cdylib"]


[dependencies]
node-bindgen = { path = "../.." }
fluvio-future = { version = "0.3.0", features = ["timer"] }

[build-dependencies]
node-bindgen = { path = "../../", default-features = false, features = ["build"] }