[package]
name = "nj-example-promise"
version = "0.0.0"
authors = ["fluvio.io"]
edition = "2021"
publish = false


[lib]
crate-type = ["cdylib"]


[dependencies]
node-bindgen = { workspace = true}
fluvio-future = { workspace = true}

[build-dependencies]
node-bindgen = { path = "../../", default-features = false, features = ["build"] }