[package]
name = "nj-example-stream"
version = "0.1.0"
authors = ["fluvio.io"]
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
futures-lite = "1.7.0"
node-bindgen = { path = "../.." }
fluvio-future = { version = "0.3.0" }


[build-dependencies]
node-bindgen = { path = "../../", default-features = false, features = ["build"] }