[package]
name = "nj-example-stream"
version = "0.0.0"
authors = ["fluvio.io"]
edition = "2021"
publish = false


[lib]
crate-type = ["cdylib"]


[dependencies]
futures-lite = "1.7.0"
node-bindgen = { path = "../.." }
fluvio-future = { version = "0.6.0", features = ["timer"]}


[build-dependencies]
node-bindgen = { path = "../../", default-features = false, features = ["build"] }