[package]
name = "threads"
version = "0.1.0"
authors = ["Ryan <ryan.michael.tate@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = { version = "0.3.5", features = ['async-await'] }
async-std = "1.6.2"

[dependencies.node-bindgen]
version = "2.1.1"
features = []

[build_dependencies.node-bindgen]
version = "2.1.1"
features = ["build"]
