[package]
name = "nj-example-uuid"
version = "0.0.0"
authors = ["fluvio.io"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
node-bindgen = { path = "../..", features = ["uuid"] }
uuid = "1.1.0"

[build-dependencies]
node-bindgen = { path = "../../", default-features = false, features = ["build"] }
